test: 신고처리 테스트코드 && Member 테스트코드추가